# ferrum-db

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pr.md  tailwind.config.js  tsconfig.json  version-plan.md  vite.config.ts  vitest.config.ts
docs/brainstorms/: v0.1-requirements.md  v0.2-requirements.md  v0.3-backend-interface-backend-feedback.md  v0.3-backend-interface-requirements.md  v0.3-frontend-prototype-requirements.md
docs/plans/: 2026-04-08-001-feat-v0-2-workspace-shell-visual-finalization-plan.md  2026-04-09-001-feat-v0-3-frontend-session-entry-prototype-plan.md  2026-04-09-002-feat-v0-3-backend-interface-plan.md  v0.1-implementation-plan.md
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: browser.rs  connection.rs  contracts.rs  errors.rs  mod.rs  session.rs
src-tauri/src/crypto/: password.rs
src-tauri/src/database/: browser.rs  errors.rs  mod.rs  mysql.rs  postgres.rs  runtime.rs  traits.rs
src-tauri/src/storage/: connection.rs
src-tauri/tests/: command_contracts.rs  database_e2e.rs
src/__tests__/: App.connection-session-entry.test.tsx  App.connections-page.test.tsx  App.connections-states.test.tsx  App.data-browser-flow.test.tsx  App.prototype-scenarios.test.tsx  App.workspace-shell.test.tsx
src/backend/: client.ts  mockBackend.test.ts  mockBackend.ts
src/test/: render.tsx  setup.ts
stitch/: database_tool_prd.html
(+57 files in other folders)
