[package]
name = "ferrum-db"
version = "0.1.0"
edition = "2021"

[lib]
name = "ferrum_db_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "mysql", "postgres"] }
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"

# Encryption
aes-gcm = "0.10"
keyring = "3"
rand = "0.8"
base64 = "0.22"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"